Fixed img border on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,8 +7,7 @@ body { margin: 0; }
 }
 #container { width: 408px; padding: 8px; }
 #logo { display: block; float: left; }
-/* #drawing { position: fixed; left: -1000px; width: 400px; height: 400px; } */
-#drawing_image, #drawing { border: 4px solid #000; width: 400px; height: 400px; cursor: pointer; display: block; }
+#drawing, #drawing_image { border: 4px solid #000; width: 400px; height: 400px; cursor: pointer; display: block; }
 #drawing_image:hover { box-shadow: 0 0 60px 0 #777; }
 #download:hover ~ #drawing_image { box-shadow: 0 0 60px 0 #777; }
 #top { margin-bottom: 8px; clear: both; height: 32px; user-select: none; }
@@ -50,8 +49,8 @@ body { margin: 0; }
 @media only screen and (max-width: 768px) {
     #outer { background-image: radial-gradient(farthest-corner at 0 0, #FFF 65%, transparent 130%); }
     #container { width: 98%; padding: 8px 1%; }
-    #drawing, #drawing_image { border: none; width: 98%; height: 98%; margin-bottom: 1%; }
-    #drawing_container { padding: 2% 0 0 1.5%; background: #000; height: 100%; width: 98%; position: initial; }
+    #drawing, #drawing_image {  border: none; width: 98%; height: 98%; margin-bottom: 2%; }
+    #drawing_container { padding: 2% 0 0 2%; background: #000; height: 100%; width: 98%; position: initial; }
     #download {
         position: fixed; 
         bottom: 0; 
